--- a/src/layouts/DashboardLayout.astro
+++ b/src/layouts/DashboardLayout.astro
@@ -10,7 +10,7 @@ interface Props {
 const { title = "Dashboard" } = Astro.props;
 ---
 
-<!doctype html>
+<!--src/layouts/DashboardLayout.astro!--><!doctype html>
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
