--- a/src/components/layout/Sidebar.astro
+++ b/src/components/layout/Sidebar.astro
@@ -15,6 +15,7 @@ const menuItems = [
 ];
 ---
 
+<!--src/components/layout/Sidebar.astro!-->
 <aside
     id="sidebar"
     class="fixed left-0 top-[64px] w-[250px] h-full bg-[#1a3c61] text-white transition-all duration-300"
