--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,25 +3,38 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-    margin: 0;
-    padding: 0;
-    overflow-x: hidden;
-}
+@layer components {
+    .material-icons {
+        font-family: 'Material Icons';
+        font-weight: normal;
+        font-style: normal;
+        font-size: 24px;
+        line-height: 1;
+        letter-spacing: normal;
+        text-transform: none;
+        display: inline-block;
+        white-space: nowrap;
+        word-wrap: normal;
+        direction: ltr;
+        -webkit-font-smoothing: antialiased;
+    }
 
-.material-icons {
-    font-family: 'Material Icons';
-    font-weight: normal;
-    font-style: normal;
-    font-size: 24px;
-    line-height: 1;
-    letter-spacing: normal;
-    text-transform: none;
-    display: inline-block;
-    white-space: nowrap;
-    word-wrap: normal;
-    direction: ltr;
-    -webkit-font-smoothing: antialiased;
+    /* Common icon sizes */
+    .icon-sm {
+        font-size: 18px;
+    }
+
+    .icon-md {
+        font-size: 24px;
+    }
+
+    .icon-lg {
+        font-size: 36px;
+    }
+
+    .icon-xl {
+        font-size: 48px;
+    }
 }
 
 /* Transition styles */
