--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import DashboardLayout from "../layouts/DashboardLayout.astro";
 import RelationshipTable from "../components/dashboard/RelationshipTable.astro";
 import RelationshipModal from "../components/dashboard/RelationshipModal.astro";
 import { relationService } from "../services/relationService";
-import CreateRelationshipButton from "@/components/dashboard/CreateRelationshipButton";
+import CreateRelationshipButton from "@/components/dashboard/CreateRelationshipButton.astro";
 
 const relationships = await relationService.getAllRelations();
 ---
