remove client:load directives

--- a/src/components/dashboard/RelationshipModal.astro
+++ b/src/components/dashboard/RelationshipModal.astro
@@ -40,7 +40,7 @@ const { defaultTab = "organization" } = Astro.props;
                 <!-- View/Edit Mode -->
                 <div id="view-edit-container" class="hidden">
                     <div class="tabs-container" data-default-tab={defaultTab}>
-                        <RelationshipTabs client:load />
+                        <RelationshipTabs />
                     </div>
                 </div>
             </div>
